--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "axios": "^0.18.0",
     "vue": "^2.5.2",
     "vue-calendar-component": "^2.7.4",
-    "vue-router": "^3.0.1"
+    "vue-router": "^3.0.1",
+    "vue-toast-component": "^2.0.0"
   },
   "devDependencies": {
     "autoprefixer": "^7.1.2",
