--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "axios": "^0.18.0",
     "vue": "^2.5.2",
     "vue-calendar-component": "^2.7.4",
+    "vue-pickers": "^1.1.5",
     "vue-router": "^3.0.1",
     "vue-toast-component": "^2.0.0"
   },
